--- a/a1/index.html
+++ b/a1/index.html
@@ -4,11 +4,11 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>トップページ -インターネットスキル認定普及協会</title>
 <meta name="description" content="インターネットスキル認定普及協会公式ウェブサイト">
-<link href="design.css" rel="stylesheet" type="text/css">
+<link href="style/design.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrap">
-    <div id="header"><img name="site_id" src="top.jpg" width="690" height="120" alt="サイトID"></div>
+    <div id="header"><img name="site_id" src="img/top.jpg" width="690" height="120" alt="サイトID"></div>
 <div id="global_navi">
 <p><a href="#">HOME</a> | <a href="#">協会情報</a> | <a href="#">ウェブデザイン技能検定</a> | <a href="#">受検申請</a> | <a href="#">リンク</a> | <a href="#">サイトマップ</a></p>
 </div>
