--- a/a6/index.html
+++ b/a6/index.html
@@ -17,7 +17,22 @@
 <a href="#"><img src="img/side_bt_home.gif" alt="HOME"></a><a href="#"><img src="img/side_bt_info.gif" alt="競技情報"></a><a href="#"><img src="img/side_bt_wdsc.gif" alt="ウェブデザイン技能競技"></a><a href="#"><img src="img/side_bt_app.gif" alt="参加申し込み"></a><a href="#"><img src="img/side_bt_faq.gif" alt="FAQ"></a><a href="#"><img src="img/side_bt_link.gif" alt="リンク"></a><a href="#"><img src="img/side_bt_sitemap.gif" alt="サイトマップ"></a> </div>
     <div id="main_content">
 	<h1>ウェブデザイン技能競技大会</h1>
-      <p>　ウェブデザイン競技大会は2001年より毎年開催されているウェブデザインの技能を競う競技大会です。</p><p>　大会は、一般の部、若年者の部の2部門で実施され、大会の優勝者は国際大会へ日本代表選手として派遣されます。</p><p>　今年は2012年4月に全国１２都市で予選が実施され、11月に東京で本選大会が開催されます。</p>
+  <p>ウェブデザイン技能競技会の最新情報をお届けします。</p>
+  <h2>ウェブデザイン技能競技会概要</h2>
+<ol>
+  <li>一般部門</li>
+  <li>若年者部門</li>
+</ol>
+  <h2>ウェブデザイン技能競技会全国予選会</h2>
+     <ul>
+       <li>北海道エリア</li>
+       <li>東北/北陸エリア</li>
+       <li>関東エリア</li>
+       <li>中部エリア</li>
+       <li>関西エリア</li>
+       <li>中国/四国エリア</li>
+       <li>九州/沖縄エリア</li>
+     </ul>
     </div>
   </div>
   <div id="footer"> 
