--- a/a2/index.html
+++ b/a2/index.html
@@ -10,7 +10,7 @@
 <div id="wrap">
     <div id="header"><img name="site_id" src="img/head_img.jpg" width="690" height="120" alt="サイトID"></div>
 <div id="global_navi">
-<a href="#"><img src="img/gl_bt_home.gif" alt="HOME"></a><a href="#"><img src="img/gl_bt_info.gif" alt="協会情報"></a><a href="#"><img src="img/gl_bt_wdsc.gif" alt="ウェブデザイン技能検定"></a><a href="#"><img src="img/gl_bt_app.gif" alt="受検申請"></a><a href="#"><img src="img/gl_bt_faq.gif" alt="FAQ"></a>
+<a href="index.html"><img src="img/gl_bt_home.gif" alt="HOME"></a><a href="info.html"><img src="img/gl_bt_info.gif" alt="協会情報"></a><a href="app.html"><img src="img/gl_bt_wdsc.gif" alt="ウェブデザイン技能検定"></a><a href="form.html"><img src="img/gl_bt_app.gif" alt="受検申請"></a><a href="#"><img src="img/gl_bt_faq.gif" alt="FAQ"></a>
 </div>
   <div id="content">
     <div id="side_navi">
