--- a/a3/index.html
+++ b/a3/index.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>トップページ-ウェブデザイン技能競技大会</title>
 <meta name="description" content="特定非営利活動法人インターネットスキル認定普及協会ウェブデザイン技能競技公式ウェブサイト">
-<link href="#" rel="stylesheet" type="text/css">
+<link href="1.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div id="wrap">
