--- a/a1/index.html
+++ b/a1/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title>トップページ -インターネットスキル認定普及協会</title>
+<title>トップページ -インターネットスキル認定普及協会1</title>
 <meta name="description" content="インターネットスキル認定普及協会公式ウェブサイト">
 <link href="style/design.css" rel="stylesheet" type="text/css">
 </head>
